classDiagram
    class CaptureRequest {
        +string id
        +HttpMethod method
        +string url
        +string path
        +string host
        +number statusCode
        +number duration
        +string capturedAt
        +boolean selected
        +boolean checked
        +boolean isGraphQL
        +boolean isWebSocket
    }

    class DomainNode {
        +type: 'domain'
        +string host
        +CaptureRequest[] children
        +number count
        +boolean hasError
        +number pendingCount
        +string latestCapturedAt
        +string firstSeenCapturedAt
        +boolean hasSelected
        +boolean hasChecked
    }

    class PathNode {
        +TreePathKind kind
        +string segment
        +number depth
        +string host
        +string pathKey
        +PathNode[] children
        +number descendantCount
        +boolean hasErrorDescendant
        +number pendingCount
        +boolean hasSelectedDescendant
        +boolean hasCheckedDescendant
        +string firstSeenCapturedAt
        +CaptureRequest request
        +string displayHost
    }

    class FlatTreeNode {
        +TreeNodeType type
        +string key
        +number depth
        +TreePathKind nodeKind
        +string segmentLabel
        +string pathKey
        +boolean isLeaf
        +number descendantCount
        +boolean hasErrorDescendant
        +number pendingCount
        +boolean expanded
        +boolean[] connectorVertical
        +boolean isLastChild
        +boolean hasSelectedDescendant
        +boolean hasCheckedDescendant
        +string host
        +string displayHost
        +number count
        +CaptureRequest request
    }

    PathNode "1" *-- "0..*" PathNode : children
    PathNode "leaf 1" o-- "1" CaptureRequest : request
    DomainNode "1" *-- "0..*" CaptureRequest : children
    note for PathNode "tree 模式递归结构，由 buildPathTree() 构建\ndomain(0) → intermediate → leaf(request)"
    note for FlatTreeNode "list/group/tree 三种模式共用的统一展平行\n由 flattenTree() / flattenPathTree() 投影生成"
    note for DomainNode "group 模式保留不变，与 PathNode 平行共存"
